ui: more invites page improvements/cleanup, fix tooltips on mobile

--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -5,6 +5,7 @@
 
 .tooltip .content {
     visibility: hidden;
+    opacity: 0;
     max-width: 10rem;
     min-width: 6rem;
     background-color: rgba(0, 0, 0, 0.6);
@@ -13,10 +14,21 @@
     border-radius: 6px;
     overflow-wrap: break-word;
     text-align: center;
+    transition: opacity 100ms;
 
     position: absolute;
     z-index: 1;
     top: -1rem;
+}
+
+.tooltip.below .content {
+    top: 2.5rem;
+    left: 0;
+    right: 0;
+}
+
+.tooltip.darker .content {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .tooltip.right .content {
@@ -31,6 +43,10 @@
     font-size: 0.8rem;
 }
 
-.tooltip:hover .content {
+.tooltip:hover .content,
+.tooltip:focus .content,
+.tooltip:focus-within .content
+{
     visibility: visible;
+    opacity: 1;
 }
